<resources>
    <string name="app_name">Tutorly</string>
    <string name="title_profile">Profile</string>
    <string name="title_forum">Forum</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="click_to_login">click_to_login</string>
    <string name="click_to_register">click_to_register</string>
    <string name="logout">logout</string>
    <string name="schedule">SCHEDULE</string>
    <string name="scheduled">SCHEDULED</string>
    <string name="wait_for_confirm">CONFIRMING</string>
    <string name="completed">COMPLETED</string>
</resources>