<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="259dp"
        android:layout_height="275dp"
        app:srcCompat="@drawable/tutorly_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tutorly"
        android:textSize="40sp"
        android:gravity="center"/>


    <TextView
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:text="@string/login" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:boxStrokeColor="#005A9C"
        app:hintTextColor="#005A9C">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="393dp"
            android:layout_height="match_parent"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:boxStrokeColor="#005A9C"
        app:hintTextColor="#005A9C">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="393dp"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="#005A9C"
        />

    <TextView
        android:id="@+id/goToRegister"
        android:text="@string/click_to_register"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        />

</LinearLayout>